--- a/src/sass/settings/_media.scss
+++ b/src/sass/settings/_media.scss
@@ -9,7 +9,11 @@
 // Set media breakpoints.
 $media-breaks: (
     0,
-    // 520px,
+) !default;
+
+// Set media features.
+$media-features: (
+    debug: false,
 ) !default;
 
 // Set media figure indent.
